# atmega-dev

./: README.md
atmega-demos/: PKGBUILD  atmega.md
atmega-demos/avr_usbasp/archives/win-driver/: Readme.txt
atmega-demos/avr_usbasp/circuit/v1/: circuit.kicad_pcb  circuit.kicad_pro  circuit.sch
atmega-demos/avr_usbasp/linux-driver/: 99-USBasp-nonroot.rules  install_rule
atmega-demos/avr_usbasp/usbasp/: Changelog.txt  Readme.txt
atmega-demos/avr_usbasp/usbasp/circuit/: usbasp.sch
atmega-demos/avr_usbasp/usbasp/firmware/: Makefile  isp.c  isp.h  main.c  usbasp.h  usbconfig.h
atmega-demos/avr_usbasp/usbasploader/firmware/: Makefile  Makefile.inc  Readme.txt  bootloaderconfig.h
atmega-demos/demos/proteus/i2c_alcd/: Makefile  URL.md  i2c_alcd.dsn  main.c  note.md
atmega-demos/demos/proteus/i2cs_alcd/: Makefile  URL.md  i2c_soft.h  (+2 more)
atmega-tools/: PKGBUILD
atmega-tools/atmega-mfile/: atmega-mfile
atmega-tools/atmega-mfile/mfile/: mfile.tcl
atmega-tools/flserterm/: gui.cpp  gui.h  main.cpp
atmega-tools/qtserterm/: .gitignore  qtserterm.cpp  qtserterm.desktop  qtserterm.h  qtserterm.pro
atmega-tools/serialterm/qt/: qtserialterminal.desktop
atmega-tools/wxserterm/: .gitignore  CMakeLists.txt  wxSerial.cpp
qtcreator-arduino/: PKGBUILD
qtcreator-arduino/arduino_c_style/: main.c  project.includes  wizard.xml
qtcreator-arduino/arduino_cpp_style/: main.cpp  wizard.xml
qtcreator-arduino/arduino_sketch_style/: Makefile  project.files  project.ino  wizard.xml
qtserterm/: .gitignore  main.cpp  qtserterm  qtserterm.cpp  qtserterm.h  qtserterm.ui
(+129 files in other folders)
